# learning-to-rank-service

./: .gitignore  analyze_judgment_list.py  analyze_judgment_list_simple.py  docker-compose.yml  improve_judgment_list.py  pyproject.toml  test_queries.txt
src/: __init__.py  config.py  database.py  main.py
src/train/: dependencies.py  model.py  repository.py  router.py  service.py
src/training_data/: dependencies.py  models.py  repository.py  router.py  service.py
